--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
 
 <style>
 
@@ -12,100 +13,6 @@ h2 {color: grey; text-align: center;}
 h4 {text-align: right;}
 label {color: grey;}
 p {color: grey; text-align: right;}
-
-/* Text inputs styles*/
-
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-/* Login buttom style*/
-
-button {
-  background-color: #84B067;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-.container {
-  padding: 20px;
-}
-
-/* Top nav bar style*/
-
-.topnav {
-    background-color: grey;
-    overflow: hidden;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #AA7A89;
-    color: white;
-  }
-
-  .topnav input[type=text] {
-  float: right;
-  padding: 6px;
-  border: none;
-  margin-right: 16px;
-  font-size: 17px;
-  width: 220px;
-}
-
-/* Image style */
-
-  .img {
-    margin-top: 40px;
-  }
-
-/* Footer style */
-
-  footer{
-    display: block;
-    margin-top: 100px;
-  }
-
-/* Message*/
-/* The message box is shown when the user clicks on the password field */
-#message {
-  display:none;
-  background: #f1f1f1;
-  color: #000;
-  position: relative;
-  padding: 20px;
-  margin-top: 10px;
-}
-
-#message p {
-  padding: 10px 35px;
-  font-size: 18px;
-}
 
 </style>
 
